Feat/client registration (#24)
* chore: improve logging

* chore: /admin/clients

* chore: memory db
